# FrontISTR

./: .CMakeLists.txt.swp  .INSTALL.md.swp  .gitignore  .gitlab-ci.yml  .gitmodules  .ubuntu2004.yml  .ubuntu2204.yml  .ubuntu2404.yml  .ubuntu2604.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  FrontISTRConfig.h.in  INSTALL.md  License.txt  METIS-copyright.txt  Makefile  Makefile.am  Makefile.conf  Makefile.conf.mpi  Makefile.conf.org  Makefile.conf.serial  Makefile.dev  Makefile.in  Makefile.inc  README  README.aurora.ja.md  README.ja  README.ja.md  README.md  VERSION  _CMakeLists.txt  setup.sh  setup_fistr.sh
fistr/: CMakeLists.txt  Makefile.am  starter.c
fistr1/: CMakeLists.txt  Makefile.am  Makefile.dev  README  README.ja  VERSION  _CMakeLists.txt  setup_fistr.sh
fistr1/libmpc/: CMakeLists.txt
fistr1/src/: CMakeLists.txt  Makefile.am  _CMakeLists.txt
fistr1/src/analysis/: CMakeLists.txt  Makefile.am  _CMakeLists.txt
fistr1/src/common/: .dependf90  CMakeLists.txt  Makefile.am  _CMakeLists.txt  fstr_FiniteRotationKinematics.f90  fstr_contact.f90  fstr_ctrl_common.f90  fstr_ctrl_dynamic.f90  fstr_ctrl_eigen.f90  fstr_ctrl_freq.f90  fstr_ctrl_heat.f90  fstr_ctrl_material.f90  fstr_ctrl_modifier.f90  fstr_ctrl_static.f90  fstr_ctrl_util.c  fstr_ctrl_util.h  fstr_ctrl_util_f.inc  fstr_debug_dump.f90  fstr_dummy.f90  fstr_element_activation.f90  fstr_get_prop.f90  fstr_mpc_preprocess.f90  fstr_precheck.f90  fstr_rcap_io.F90  fstr_rcap_io.f90  fstr_rcap_io_dummy.f90  fstr_setup.f90  fstr_setup_util.f90  fstr_sort_index.c  fstr_sort_index.h  hecmw2fstr_connect_conv.c  hecmw2fstr_connect_conv.h  hecmw2fstr_mesh_conv.f90
fistr1/src/lib/: .dependf90  CMakeLists.txt  GaussM.f90  MUMPS_wrapper.f90  MUMPS_wrapper_dumm.f90  Makefile.am  MeshDefinition.inc  _CMakeLists.txt  dynamic_mass.f90  eigen_LIB.f90  eigen_LIB_2d1mass.f90  eigen_LIB_2d2mass.f90  eigen_LIB_3d1mass.f90  eigen_LIB_3d2mass.f90  fstr_lczparm.f90  heat_LIB.f90  heat_LIB_CAPACITY.f90  heat_LIB_CONDUCTIVITY.f90  heat_LIB_DFLUX.f90  heat_LIB_FILM.f90  heat_LIB_NEUTRAL.f90  heat_LIB_RADIATE.f90  heat_LIB_THERMAL.f90  m_Makrose.f90  m_MakrosePartMesh.f90  m_Metis403API_f.F90  m_Metis403API_f.f90  m_Metis403API_f_dumm.f90  m_Metis510API_f.F90  m_Metis510API_f.f90  m_Metis510API_f_dumm.f90  m_common_struct.f90  m_dummy.f90  m_element_activation.f90  m_fstr.F90  m_fstr.f90  m_fstr_freqdata.f90  m_fstr_para_contact.F90  m_fstr_para_contact.f90  m_out.f90  (+23 more)
fistr1/src/main/: .dependf90  CMakeLists.txt  FrontISTRConfig.h  Makefile.am  _CMakeLists.txt  fistr_main.f90  fistr_main_contact.f90  main.c  vhcall_wrapper.f90
fistr1/tools/: CMakeLists.txt  Makefile.am  _CMakeLists.txt
fistr1/tools/launcher/: fstr_run.sh  fstr_srun.sh  gen_hecmw_ctrl.sh
fistr1/tools/neu2fstr/: CMakeLists.txt  Makefile.am  VERSION  _CMakeLists.txt  neu2fstr.cpp
fistr2/: Makefile.am  Makefile.conf.mingw  Makefile.dev  README  README.ja  VERSION  setup_fistr.sh
fistr2/examples/exA/: A300.cnt
fistr2/examples/exB/: B341.cnt  B361.cnt
fistr2/examples/gas_jungle/: model.cnt
fistr2/src/: Makefile.am
fistr2/src/analysis/: Makefile.am
fistr2/src/common/: Makefile.am  fstr_contact.f90  fstr_ctrl_common.f90  fstr_ctrl_dynamic.f90  fstr_ctrl_eigen.f90  fstr_ctrl_heat.f90  fstr_ctrl_material.f90  fstr_ctrl_modifier.f90  fstr_ctrl_static.f90  fstr_ctrl_util.c  fstr_ctrl_util.h  fstr_ctrl_util_f.inc  fstr_debug_dump.f90  fstr_get_prop.f90  fstr_precheck.f90  fstr_rcap_io.f90  fstr_rcap_io_dummy.f90  fstr_setup.f90  fstr_setup_util.f90  fstr_sort_index.c  fstr_sort_index.h  hecmw2fstr_connect_conv.c  hecmw2fstr_connect_conv.h  hecmw2fstr_mesh_conv.f90  hecmw_config.h
fistr2/src/hecmw2/: Makefile.am  hecmw_struct.f90  mw3_interface.f90
fistr2/src/lib/: GaussM.f90  Makefile.am  eigen_LIB.f90  eigen_LIB_2d1mass.f90  eigen_LIB_2d2mass.f90  eigen_LIB_3d1mass.f90  eigen_LIB_3d2mass.f90  fstr_lczparm.f90  heat_LIB.f90  heat_LIB_CAPACITY.f90  heat_LIB_CONDUCTIVITY.f90  heat_LIB_DFLUX.f90  heat_LIB_FILM.f90  heat_LIB_RADIATE.f90  heat_LIB_THERMAL.f90  m_fstr.f90  m_out.f90  m_step.f90  precheck_LIB_2d.f90  precheck_LIB_3d.f90  precheck_LIB_shell.f90  solve_LINEQ.f90  static_LIB.f90  static_LIB_2d.f90  static_LIB_3d.f90  static_LIB_3dIC.f90  static_LIB_C3D8.f90  static_LIB_shell.f90
fistr2/src/main/: Makefile.am  fistr_main.f90  istr.f90
fistr2/tutorial/exA/: A300.cnt  a341.msh.0  a341p.msh.0  a341p.msh.1  a342.msh.0  a351.msh.0  a352.msh.0  a361.msh.0  a362.msh.0
fistr2/tutorial/exB/: B341.cnt  B361.cnt  b341.msh.0  b341p.msh.0  b341p.msh.1  b361.msh.0
fistr2/tutorial/gas_jungle/: model.cnt  modelp.msh.0  modelp.msh.1
fistr2/tutorial/plastic_cylinder/: necking.cnt  necking.msh.0
hecmw1/: CHANGES  CHANGES.ja  CMakeLists.txt  Makefile.am  Makefile.dev  README  README.ja  VERSION  _CMakeLists.txt  setup_hecmw.sh  setup_monolis_gnu.sh
hecmw1/src/: CMakeLists.txt  Makefile.am  _CMakeLists.txt
hecmw1/src/common/: .dependf90  CMakeLists.txt  Makefile.am  _CMakeLists.txt  hecmw_ablex.c  hecmw_ablex.h  hecmw_ablex.l  hecmw_amplitude_f.f90  hecmw_array_util.f90  hecmw_bin_io.c  hecmw_bin_io.h  hecmw_bit_array.c  hecmw_bit_array.h  hecmw_comm.c  hecmw_comm.h  hecmw_common.h  hecmw_common_define.h  hecmw_config.h  hecmw_conn_conv.c  hecmw_conn_conv.h  hecmw_control.c  hecmw_control.h  hecmw_control_f.f90  hecmw_ctrllex.c  hecmw_ctrllex.h  hecmw_ctrllex.l  hecmw_debug_write_dist.c  hecmw_debug_write_dist.h  hecmw_dist.c  hecmw_dist.h  hecmw_dist_alloc.c  hecmw_dist_alloc.h  hecmw_dist_copy_c2f.c  hecmw_dist_copy_c2f.h  hecmw_dist_copy_c2f_f.f90  hecmw_dist_copy_f2c.c  hecmw_dist_copy_f2c.h  hecmw_dist_copy_f2c_f.f90  hecmw_dist_free.c  hecmw_dist_free.h  (+122 more)
hecmw1/src/couple/: .dependf90  CMakeLists.txt  Makefile.am  _CMakeLists.txt  hecmw_couple.c  hecmw_couple.h  (+68 more)
hecmw1/tools/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile.am  _CMakeLists.txt
hecmw1/util/: Makefile.am  msg_master.xml  msg_setup.pl
hecmw2/: Makefile.am  Makefile.dev  README  README.ja  VERSION  setup_hecmw.sh
hecmw2/src/: Makefile.am
hecmw2/tools/: Makefile.am
(+3932 files in other folders)
