add_library(fistr)
target_include_directories(fistr
  PRIVATE
  src/common
  ../hecmw1/src/common
  ../hecmw1/src/hecmw
  ../hecmw1/src/visualizer
  ${CMAKE_BINARY_DIR}/hecmw1
  )
target_link_libraries(fistr
  PRIVATE
  hecmw
  OpenMP::OpenMP_C
  OpenMP::OpenMP_CXX
  OpenMP::OpenMP_Fortran
  MPI::MPI_C
  MPI::MPI_CXX
  MPI::MPI_Fortran
  )
add_subdirectory(src)

add_executable(fistr1
  src/main/main.c
  "${CMAKE_BINARY_DIR}/FrontISTRConfig.h"
  )
target_include_directories(fistr1
  PRIVATE
  ../hecmw1/src/common
  ${CMAKE_BINARY_DIR}
  )
target_link_libraries(fistr1
  PRIVATE
  fistr
  hecmw
  OpenMP::OpenMP_C
  OpenMP::OpenMP_CXX
  OpenMP::OpenMP_Fortran
  MPI::MPI_C
  MPI::MPI_CXX
  MPI::MPI_Fortran
  )

add_subdirectory(tools)

