###############################################################################
# Copyright (c) 2019 FrontISTR Commons
# This software is released under the MIT License, see License.txt
###############################################################################

add_subdirectory(analysis)
add_subdirectory(common)
add_subdirectory(lib)
add_subdirectory(main)
